--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/title', title: 'New Post'%>
+<%= render 'shared/title', title: 'Edit Post'%>
 
 <div class="well col-md-12">
   <%= form_for @post do |f| %>
