--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<%= render 'layouts/navigation' %>
+<div class="container">
+  <div class="row">
+    <div class="well col-md-12">
+      <%= yield %>
+    </div>
+  </div>
+ </div>
 </body>
 </html>
