--- a/app/views/shared/_title.html.erb
+++ b/app/views/shared/_title.html.erb
@@ -1,4 +1,13 @@
 <body>
-	<h1><%= title%></h1>
+	<h1 style="color:black"><%= title%></h1>
 	<hr>
+
+	<div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <%= render 'shared/messages' %>
+        <%= yield %>
+      </div>
+    </div>
+  </div>
 </body>
